# CoNoir-to-R1CS

./: Cargo.toml  README.md
src/: lib.rs
src/circom/: mod.rs  proof_schema.rs  proving_key.rs  solidity_template.sol.template  solidity_verifier.rs
src/noir/: mod.rs  r1cs.rs  ultrahonk.rs
src/r1cs/: binops.rs  digits.rs  groth16.rs  interner.rs  memory.rs  mod.rs  noir_proof_schema.rs  noir_to_r1cs.rs  r1cs.rs  r1cs_solver.rs  ram.rs  range_check.rs  rom.rs  sparse_matrix.rs
src/trace/: mod.rs  poseidon2_rep3.rs
