[package]
name = "co-noir-to-r1cs"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/CoNoir-to-R1CS"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[dependencies]
acir = { version = "1.0.0-beta.14", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.14", package = "acir" }
ark-bn254 = "^0.5.0"
ark-circom = { version = "^0.5.0", git = "https://github.com/TaceoLabs/circom-compat.git", rev = "7f178fd", default-features = false, features = [
    "r1cs_file",
] }
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = "^0.5.0"
ark-groth16 = "0.5.0"
ark-poly = "^0.5.0"
ark-relations = "^0.5.0"
ark-serialize = "^0.5.0"
clap = { version = "4", features = ["derive", "env"] }
circom-types = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-acvm = { version = "0.6.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-builder = { version = "0.4.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-circom = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-groth16 = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-noir = { version = "0.6.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-noir-common = { version = "0.1.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-noir-types = { version = "0.1.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
eyre = "0.6.12"
itertools = "0.14.0"
mpc-core = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
mpc-net = { version = "0.4.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb", features = [
    "local",
] }
noirc-artifacts = { version = "1.0.0-beta.14", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.14", package = "noirc_artifacts" }
num-bigint = { version = "0.4.6" }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1"
tracing = "0.1.40"
